@@ -1,5 +1,9 @@
 # changes since the last release
 
+  -- A bug was fixed that occurred when a retry was triggered in
+     the middle of a group of subcycles, rather than at the
+     beginning of the advance (#358).
+
   -- Tagging can now be done on relative gradients, in addition
      to the existing capability for absolute gradients (#354).
      For example, tempgrad_rel is a relative gradient criterion
